# tagfinder

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CppCheckSuppressions.txt
.github/workflows/: ci.yml  release.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  TagFinderConfig.cmake.in
include/apriltag/: apriltag.hpp
src/app/: CMakeLists.txt  main.cpp
src/apriltag/: CMakeLists.txt  apriltag.cpp
tests/: CMakeLists.txt  apriltag_tests.cpp
